k8s/00-init.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
  annotations:
    app: gosite
  name: gosite
  clusterName: raspberrypi
