k8s/rendered.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
  annotations:
    app: gosite
  name: gosite
  clusterName: raspberrypi
---
apiVersion: v1
kind: Service
metadata:
  name: gosite-svc
  namespace: gosite
  labels:
    app: gosite
spec:
  ports:
  - name: http
    port: 8080
    nodePort: 30081
  selector:
    app: gosite
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gosite
  namespace: gosite
  labels:
    app: gosite
  annotations:
    app: gosite
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gosite
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      name: gosite
      namespace: gosite
      labels:
        app: gosite
      annotations:
        app: gosite
    spec:
      containers:
      - name: gosite
        image: smarman/gosite:0.0.7
        command: ['./init/app']
        imagePullPolicy: Always
          #livenessProbe:
          #  httpGet:
          #    path: /about
          #    port: 8080
          #  initialDelaySeconds: 5
          #  periodSeconds: 60
        ports:
        - containerPort: 8080
        stdin: true
        tty: true
      restartPolicy: Always
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gosite-ing
  namespace: gosite
spec:
  rules:
  - host: gosite.local.seanhome.xyz
    http:
      paths:
      - backend: 
          serviceName: gosite-svc
          servicePort: http
        path: /
